<resources>
    <string name="app_name">Loseit_androidapp</string>
    <string name="new_workout">New Workout</string>
    <string name="workout_name">Workout Name</string>
    <string name="choose_fitness_level">Choose Fitness Level</string>
    <string name="workout_name1">Workout name</string>
    <string name="beginner">Beginner</string>
    <string name="intermidate">intermidate</string>
    <string name="intermedate">intermedate</string>
    <string name="advance">advance</string>
    <string name="full_exercise">Full Exercise</string>
    <string name="cardio">cardio</string>
    <string name="cardio_ex">Cardio</string>
    <string name="legs">Legs</string>
    <string name="back">Back</string>
    <string name="chest">chest</string>
    <string name="_110_kcal">110 kcal</string>
    <string name="exercise_with_jumping_rope">Exercise with Jumping Rope</string>
    <string name="differ">|</string>
    <string name="_10_min">10 min</string>
    <string name="beginner_plan">Beginner</string>
    <string name="meal_plans">Meal Plans</string>
    <string name="home">Home</string>
    <string name="exercise">Exercise</string>
    <string name="profile">Profile</string>
    =======
    <string name="title_activity_side_menu">Side_menu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="workout">Workout</string>
    <string name="exercise_with_sitting_dumbells">Exercise with sitting Dumbells</string>
    <string name="_24_02_2022">24/02/2022</string>
    <string name="completed_on">Completed on</string>
    <string name="_3">3</string>
    <string name="_12">/12</string>
    <string name="total_time">Total time</string>
    <string name="_00_45_min">00:45 min</string>
    <string name="total_calories">Total calories</string>
    <string name="_120_kcal">120 kcal</string>
    <string name="total_weight">Total weight</string>
    <string name="_59kg">59kg</string>
    <string name="heart_rate">Heart rate</string>
    <string name="_115_bpm">115 bpm</string>
    <string name="save">Save</string>
    <string name="stretching_workout_length">Stretching workout length</string>
    <string name="up_next">up next</string>
    <string name="level">Level</string>
    <string name="beginner1">Beginner</string>
    <string name="there_are_many_variations_of_passages_of_lorem_ipsum_available_but_the_majority_have_suffered_alteration_in_some_form_by_injected_humour">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour,</string>
    <string name="exercise_with_sittin">Exercise with sitting Dumbells</string>
    <string name="_3_weeks_20_exercises">3 weeks - 20 exercises</string>
    <string name="app_settings">App settings</string>
    <string name="reminder">Reminder</string>
    <string name="change_password">Change Password</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="apple_health">Apple Health</string>
    <string name="language">Language</string>
    <string name="upgrade_premium">Upgrade premium</string>
    <string name="english">English</string>
    <string name="result">Result</string>
    <string name="today_you_ve_an_average_of_71_bpm">Today you\'ve an average of 71 bpm</string>
    <string name="_15_min_ago">15 min ago</string>
    <string name="notifications">notifications</string>
    <string name="meal_plan">meal plan</string>
    <string name="feel_like_you_got_a_recipe">Feel like you got a recipe ?</string>
    <string name="water_tracker">Water Tracker</string>
    <string name="_15_meals">15 meals</string>
    <string name="green_beans_tomatoes_eggs">Green beans, tomatoes, eggs</string>
    <!--    >>>>>>> 0b969fd05f6fb046d067860f118a182e89211f82-->
</resources>