<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="#FCFCFC"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Result">


  <!-- HEADER  -->

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="5dp"
      >
    <ImageView
        android:id="@+id/backArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/back"
        android:padding="20dp"
        tools:layout_editor_absoluteX="34dp"
        tools:layout_editor_absoluteY="51dp" />

    <TextView
        android:id="@+id/exerciseHeading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:gravity="center"
        android:fontFamily="@font/bebasneue_regular"
        android:padding="10dp"
        android:textSize="30sp"
        android:textColor="#000000"
        />

  </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workout"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/dmsans_medium"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/exercise"
            android:text="@string/exercise_with_sitting_dumbells"
            android:textSize="12sp"
            android:layout_marginTop="5dp"
            android:textStyle="normal"
            android:fontFamily="@font/dmsans_medium"
            android:textColor="@color/black"
            />

        <!--        date-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:text="@string/completed_on"
              android:textSize="12sp"
              android:layout_marginTop="5dp"
              android:textStyle="normal"
              android:fontFamily="@font/dmsans_medium"
              android:textColor="#3A4750"
              />
          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/compDate"
              android:layout_marginStart="1dp"
              android:text="@string/_24_02_2022"
              android:textSize="12sp"
              android:layout_marginTop="5dp"
              android:textStyle="normal"
              android:fontFamily="@font/dmsans_medium"
              android:textColor="#3A4750"
              />

        </LinearLayout>

      <!--  Exercise count.  -->

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="5dp"
          android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Exercise"
            android:textSize="12sp"
            android:layout_marginTop="5dp"
            android:textStyle="normal"
            android:fontFamily="@font/dmsans_medium"
            android:textColor="#3A4750"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/exerciseCount"
            android:layout_marginStart="2dp"
            android:text="@string/_3"
            android:textSize="12sp"
            android:layout_marginTop="5dp"
            android:textStyle="normal"
            android:fontFamily="@font/dmsans_medium"
            android:textColor="#3A4750"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:text="@string/_12"
            android:textSize="12sp"
            android:layout_marginTop="5dp"
            android:textStyle="normal"
            android:fontFamily="@font/dmsans_medium"
            android:textColor="#3A4750"
            />

      </LinearLayout>


      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="Workout Summary"
          android:textSize="16sp"
          android:textStyle="bold"
          android:layout_marginTop="20dp"
          android:fontFamily="@font/dmsans_medium"
          android:textColor="@color/black"
          />

      <!--   Summary   -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp">
            <LinearLayout
                android:id="@+id/rectangle_1"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_marginEnd="18dp"
                android:background="@drawable/rectangle"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:fontFamily="@font/dmsans_medium"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/total_time"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/rectangle1Time"
                    android:fontFamily="@font/dmsans_medium"
                    android:textSize="16sp"
                    android:layout_marginTop="9dp"
                    android:textColor="@color/black"
                    android:text="@string/_00_45_min"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/rectangle_2"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_toEndOf="@+id/rectangle_1"
                android:background="@drawable/rectangle"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:fontFamily="@font/dmsans_medium"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/total_calories"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/rectangle2Calories"
                    android:fontFamily="@font/dmsans_medium"
                    android:textSize="16sp"
                    android:layout_marginTop="9dp"
                    android:textColor="@color/black"
                    android:text="@string/_120_kcal"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/rectangle_3"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_below="@+id/rectangle_1"
                android:layout_marginEnd="18dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/rectangle"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:fontFamily="@font/dmsans_medium"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/total_weight"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/rectangle3Weight"
                    android:fontFamily="@font/dmsans_medium"
                    android:textSize="16sp"
                    android:layout_marginTop="9dp"
                    android:textColor="@color/black"
                    android:text="@string/_59kg"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/rectangle_4"
                android:layout_width="150dp"
                android:layout_height="80dp"
                android:layout_below="@+id/rectangle_2"
                android:layout_marginTop="18dp"
                android:layout_toEndOf="@+id/rectangle_3"
                android:background="@drawable/rectangle"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="16sp"
                    android:fontFamily="@font/dmsans_medium"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/heart_rate"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/rectangle4HeartRate"
                    android:fontFamily="@font/dmsans_medium"
                    android:textSize="16sp"
                    android:layout_marginTop="9dp"
                    android:textColor="@color/black"
                    android:text="@string/_115_bpm"/>

            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>

    <!-- Button -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/saveBtn"
        android:layout_width="338dp"
        android:layout_marginTop="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#B0C929"
        android:fontFamily="@font/dmsans_bold"
        android:textColor="@color/white"
        android:text="@string/save"
        android:textSize="18sp"
        android:textStyle="bold"

        />
</LinearLayout>