<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FCFCFC"
    tools:context=".Exercises">

    <!-- HEADER  -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        >
        <ImageView
            android:id="@+id/backArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/back"
            android:padding="20dp"
            tools:layout_editor_absoluteX="34dp"
            tools:layout_editor_absoluteY="51dp" />

        <TextView
            android:id="@+id/exerciseHeading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_exercise"
            android:fontFamily="@font/bebasneue_regular"
            android:padding="10dp"
            android:textSize="30sp"
            android:textColor="#000000"
            android:layout_gravity="center"
            android:layout_marginStart="80dp"
            />

    </LinearLayout>

    <!-- BUTTON OPTIONS  -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cardio_ex"
                android:layout_margin="5dp"
                android:textColor="@color/white"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/black"
                style="?android:attr/buttonBarButtonStyle" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/legs"
                android:layout_margin="5dp"
                android:textColor="@color/black"
                android:backgroundTint="#FFBDBCBC"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:layout_margin="5dp"
                android:textColor="@color/black"
                android:backgroundTint="#FFBDBCBC"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chest"
                android:layout_margin="5dp"
                android:textColor="@color/black"
                android:backgroundTint="#FFBDBCBC"
                style="?android:attr/buttonBarButtonStyle" />


        </LinearLayout>

    </ScrollView>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_exercises"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp"
        android:layout_margin="5dp"
        >

    </androidx.recyclerview.widget.RecyclerView>


</LinearLayout>